// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DbStore Create Test: after list get 1`] = `
Object {
  "lists": Object {
    "formModel": Object {
      "limit": 10,
      "result": Array [
        Object {
          "id": 49,
          "myNum": 20580,
          "myString": "49num",
        },
        Object {
          "id": 0,
          "myNum": 0,
          "myString": "0num",
        },
        Object {
          "id": 2,
          "myNum": 840,
          "myString": "2num",
        },
        Object {
          "id": 3,
          "myNum": 1260,
          "myString": "3num",
        },
        Object {
          "id": 4,
          "myNum": 1680,
          "myString": "4num",
        },
        Object {
          "id": 5,
          "myNum": 2100,
          "myString": "5num",
        },
        Object {
          "id": 6,
          "myNum": 2520,
          "myString": "6num",
        },
        Object {
          "id": 7,
          "myNum": 2940,
          "myString": "7num",
        },
        Object {
          "id": 8,
          "myNum": 3360,
          "myString": "8num",
        },
        Object {
          "id": 9,
          "myNum": 3780,
          "myString": "9num",
        },
      ],
      "skip": 0,
      "total": 99,
    },
  },
}
`;

exports[`DbStore Create Test: after login 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "list": {
    "result": [],
    "total": 0,
    "limit": 10,
    "skip": 0
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 0,
  "queryData": {},
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: after second page get 1`] = `
Object {
  "lists": Object {
    "formModel": Object {
      "limit": 10,
      "result": Array [
        Object {
          "id": 10,
          "myNum": 4200,
          "myString": "10num",
        },
        Object {
          "id": 11,
          "myNum": 4620,
          "myString": "11num",
        },
        Object {
          "id": 12,
          "myNum": 5040,
          "myString": "12num",
        },
        Object {
          "id": 13,
          "myNum": 5460,
          "myString": "13num",
        },
        Object {
          "id": 14,
          "myNum": 5880,
          "myString": "14num",
        },
        Object {
          "id": 15,
          "myNum": 6300,
          "myString": "15num",
        },
        Object {
          "id": 16,
          "myNum": 6720,
          "myString": "16num",
        },
        Object {
          "id": 17,
          "myNum": 7140,
          "myString": "17num",
        },
        Object {
          "id": 18,
          "myNum": 7560,
          "myString": "18num",
        },
        Object {
          "id": 19,
          "myNum": 7980,
          "myString": "19num",
        },
      ],
      "skip": 10,
      "total": 99,
    },
  },
}
`;

exports[`DbStore Create Test: after third page get 1`] = `
Object {
  "lists": Object {
    "formModel": Object {
      "limit": 10,
      "result": Array [
        Object {
          "id": 20,
          "myNum": 8400,
          "myString": "20num",
        },
        Object {
          "id": 21,
          "myNum": 8820,
          "myString": "21num",
        },
        Object {
          "id": 22,
          "myNum": 9240,
          "myString": "22num",
        },
        Object {
          "id": 23,
          "myNum": 9660,
          "myString": "23num",
        },
        Object {
          "id": 24,
          "myNum": 10080,
          "myString": "24num",
        },
        Object {
          "id": 25,
          "myNum": 10500,
          "myString": "25num",
        },
        Object {
          "id": 26,
          "myNum": 10920,
          "myString": "26num",
        },
        Object {
          "id": 27,
          "myNum": 11340,
          "myString": "27num",
        },
        Object {
          "id": 28,
          "myNum": 11760,
          "myString": "28num",
        },
        Object {
          "id": 29,
          "myNum": 12180,
          "myString": "29num",
        },
      ],
      "skip": 20,
      "total": 99,
    },
  },
}
`;

exports[`DbStore Create Test: before login 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 1,
  "queryData": {},
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: changing value manually but onUpdate detects changes loaded narrowing search 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "list": {
    "result": [
      {
        "myString": "9num",
        "myNum": 3780,
        "id": 9
      }
    ],
    "total": 1,
    "limit": 10,
    "skip": 0
  },
  "loading": true,
  "currentPage": 0,
  "maxPage": 1,
  "queryData": {
    "myString": "9num"
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: changing value manually but onUpdate detects changes no query 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "list": {
    "result": [
      {
        "myString": "20num",
        "myNum": 8400,
        "id": 20
      },
      {
        "myString": "21num",
        "myNum": 8820,
        "id": 21
      },
      {
        "myString": "22num",
        "myNum": 9240,
        "id": 22
      },
      {
        "myString": "23num",
        "myNum": 9660,
        "id": 23
      },
      {
        "myString": "24num",
        "myNum": 10080,
        "id": 24
      },
      {
        "myString": "25num",
        "myNum": 10500,
        "id": 25
      },
      {
        "myString": "26num",
        "myNum": 10920,
        "id": 26
      },
      {
        "myString": "27num",
        "myNum": 11340,
        "id": 27
      },
      {
        "myString": "28num",
        "myNum": 11760,
        "id": 28
      },
      {
        "myString": "29num",
        "myNum": 12180,
        "id": 29
      }
    ],
    "total": 99,
    "limit": 10,
    "skip": 20
  },
  "loading": true,
  "currentPage": 0,
  "maxPage": 10,
  "queryData": {
    "myString": null
  },
  "showNextPage": true,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: changing value manually but onUpdate detects changes no query loaded 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "list": {
    "result": [
      {
        "myString": "20num",
        "myNum": 8400,
        "id": 20
      },
      {
        "myString": "21num",
        "myNum": 8820,
        "id": 21
      },
      {
        "myString": "22num",
        "myNum": 9240,
        "id": 22
      },
      {
        "myString": "23num",
        "myNum": 9660,
        "id": 23
      },
      {
        "myString": "24num",
        "myNum": 10080,
        "id": 24
      },
      {
        "myString": "25num",
        "myNum": 10500,
        "id": 25
      },
      {
        "myString": "26num",
        "myNum": 10920,
        "id": 26
      },
      {
        "myString": "27num",
        "myNum": 11340,
        "id": 27
      },
      {
        "myString": "28num",
        "myNum": 11760,
        "id": 28
      },
      {
        "myString": "29num",
        "myNum": 12180,
        "id": 29
      }
    ],
    "total": 99,
    "limit": 10,
    "skip": 20
  },
  "loading": true,
  "currentPage": 0,
  "maxPage": 10,
  "queryData": {
    "myString": null
  },
  "showNextPage": true,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: changing value manually but onUpdate detects changes now loading 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "list": {
    "result": [
      {
        "myString": "9num",
        "myNum": 3780,
        "id": 9
      }
    ],
    "total": 1,
    "limit": 10,
    "skip": 0
  },
  "loading": true,
  "currentPage": 0,
  "maxPage": 1,
  "queryData": {
    "myString": "9num"
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: empty result 1`] = `
<div
  class="mymock"
>
  {
  "prefix": "newpre",
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "list": {
    "result": [],
    "total": 0,
    "limit": 10,
    "skip": 0
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 0,
  "queryData": {
    "newpre": {
      "myString": "UNDEFINEDAAA",
      "myNum": 840
    }
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: empty result with defaultVals but not fetched yet 1`] = `
<div
  class="mymock"
>
  {
  "prefix": "newpre",
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "defaultEntries": [
    0,
    11,
    22,
    33,
    44,
    55,
    66,
    77,
    88
  ],
  "list": {
    "result": [],
    "total": 0,
    "isDefaultList": true
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 0,
  "queryData": {
    "newpre": {
      "myString": "UNDEFINEDAAA",
      "myNum": 840
    }
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: empty result with defaultVals with guaranteed fetch 1`] = `
<div
  class="mymock"
>
  {
  "prefix": "newpre",
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "defaultEntries": [
    0,
    11,
    22,
    33,
    44,
    55,
    66,
    77,
    88
  ],
  "list": {
    "result": [
      {
        "myString": "0num",
        "myNum": 0,
        "id": 0
      },
      {
        "myString": "11num",
        "myNum": 4620,
        "id": 11
      },
      {
        "myString": "22num",
        "myNum": 9240,
        "id": 22
      },
      {
        "myString": "33num",
        "myNum": 13860,
        "id": 33
      },
      {
        "myString": "44num",
        "myNum": 18480,
        "id": 44
      },
      {
        "myString": "55num",
        "myNum": 23100,
        "id": 55
      },
      {
        "myString": "66num",
        "myNum": 27720,
        "id": 66
      },
      {
        "myString": "77num",
        "myNum": 32340,
        "id": 77
      },
      {
        "myString": "88num",
        "myNum": 36960,
        "id": 88
      }
    ],
    "total": 0,
    "isDefaultList": true
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 0,
  "queryData": {
    "newpre": {
      "myString": "UNDEFINEDAAA",
      "myNum": 840
    }
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: list after fetch 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "list": {
    "result": [
      {
        "myString": "49num",
        "myNum": 20580,
        "id": 49
      },
      {
        "myString": "0num",
        "myNum": 0,
        "id": 0
      },
      {
        "myString": "2num",
        "myNum": 840,
        "id": 2
      },
      {
        "myString": "3num",
        "myNum": 1260,
        "id": 3
      },
      {
        "myString": "4num",
        "myNum": 1680,
        "id": 4
      },
      {
        "myString": "5num",
        "myNum": 2100,
        "id": 5
      },
      {
        "myString": "6num",
        "myNum": 2520,
        "id": 6
      },
      {
        "myString": "7num",
        "myNum": 2940,
        "id": 7
      },
      {
        "myString": "8num",
        "myNum": 3360,
        "id": 8
      },
      {
        "myString": "9num",
        "myNum": 3780,
        "id": 9
      }
    ],
    "total": 99,
    "limit": 10,
    "skip": 0
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 10,
  "queryData": {},
  "showNextPage": true,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: list before fetch 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "list": {
    "result": [],
    "total": 0,
    "limit": 10,
    "skip": 0
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 0,
  "queryData": {},
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: list on fourth page 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "list": {
    "result": [
      {
        "myString": "30num",
        "myNum": 12600,
        "id": 30
      },
      {
        "myString": "31num",
        "myNum": 13020,
        "id": 31
      },
      {
        "myString": "32num",
        "myNum": 13440,
        "id": 32
      },
      {
        "myString": "33num",
        "myNum": 13860,
        "id": 33
      },
      {
        "myString": "34num",
        "myNum": 14280,
        "id": 34
      },
      {
        "myString": "35num",
        "myNum": 14700,
        "id": 35
      },
      {
        "myString": "36num",
        "myNum": 15120,
        "id": 36
      },
      {
        "myString": "37num",
        "myNum": 15540,
        "id": 37
      },
      {
        "myString": "38num",
        "myNum": 15960,
        "id": 38
      },
      {
        "myString": "39num",
        "myNum": 16380,
        "id": 39
      }
    ],
    "total": 99,
    "limit": 10,
    "skip": 30
  },
  "loading": false,
  "currentPage": 3,
  "maxPage": 10,
  "queryData": {},
  "showNextPage": true,
  "showPrevPage": true
}
</div>
`;

exports[`DbStore Create Test: prefix after list get 1`] = `
Object {
  "lists": Object {
    "formModel": Object {
      "limit": 10,
      "result": Array [
        Object {
          "id": 9,
          "myNum": 3780,
          "myString": "9num",
        },
      ],
      "skip": 0,
      "total": 1,
    },
  },
}
`;

exports[`DbStore Create Test: prefix list after fetch 1`] = `
<div
  class="mymock"
>
  {
  "prefix": "createpref",
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "loading": true,
  "currentPage": 0,
  "maxPage": 1,
  "queryData": {
    "createpref": {}
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: prefix list before fetch 1`] = `
<div
  class="mymock"
>
  {
  "prefix": "createpref",
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 1,
  "queryData": {
    "createpref": {}
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: prefix second page 1`] = `
<div
  class="mymock"
>
  {
  "prefix": "createpref",
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "list": {
    "result": [
      {
        "myString": "10num",
        "myNum": 4200,
        "id": 10
      },
      {
        "myString": "11num",
        "myNum": 4620,
        "id": 11
      },
      {
        "myString": "12num",
        "myNum": 5040,
        "id": 12
      },
      {
        "myString": "13num",
        "myNum": 5460,
        "id": 13
      },
      {
        "myString": "14num",
        "myNum": 5880,
        "id": 14
      },
      {
        "myString": "15num",
        "myNum": 6300,
        "id": 15
      },
      {
        "myString": "16num",
        "myNum": 6720,
        "id": 16
      },
      {
        "myString": "17num",
        "myNum": 7140,
        "id": 17
      },
      {
        "myString": "18num",
        "myNum": 7560,
        "id": 18
      },
      {
        "myString": "19num",
        "myNum": 7980,
        "id": 19
      }
    ],
    "total": 99,
    "limit": 10,
    "skip": 10
  },
  "loading": false,
  "currentPage": 1,
  "maxPage": 10,
  "queryData": {
    "createpref": {}
  },
  "showNextPage": true,
  "showPrevPage": true
}
</div>
`;

exports[`DbStore Create Test: prefix still first if prefix unknown but query number 1`] = `
<div
  class="mymock"
>
  {
  "prefix": "newpre",
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "list": {
    "result": [],
    "total": 0,
    "limit": 10,
    "skip": 0
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 0,
  "queryData": {
    "newpre": {
      "myNum": 840
    }
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: prefix still first if prefix unknown but query set 1`] = `
<div
  class="mymock"
>
  {
  "prefix": "newpre",
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "list": {
    "result": [
      {
        "myString": "1num",
        "myNum": 420,
        "id": 1
      }
    ],
    "total": 1,
    "limit": 10,
    "skip": 0
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 1,
  "queryData": {
    "newpre": {
      "myString": "1num"
    }
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: prefix third page 1`] = `
<div
  class="mymock"
>
  {
  "prefix": "createpref",
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "list": {
    "result": [
      {
        "myString": "20num",
        "myNum": 8400,
        "id": 20
      },
      {
        "myString": "21num",
        "myNum": 8820,
        "id": 21
      },
      {
        "myString": "22num",
        "myNum": 9240,
        "id": 22
      },
      {
        "myString": "23num",
        "myNum": 9660,
        "id": 23
      },
      {
        "myString": "24num",
        "myNum": 10080,
        "id": 24
      },
      {
        "myString": "25num",
        "myNum": 10500,
        "id": 25
      },
      {
        "myString": "26num",
        "myNum": 10920,
        "id": 26
      },
      {
        "myString": "27num",
        "myNum": 11340,
        "id": 27
      },
      {
        "myString": "28num",
        "myNum": 11760,
        "id": 28
      },
      {
        "myString": "29num",
        "myNum": 12180,
        "id": 29
      }
    ],
    "total": 99,
    "limit": 10,
    "skip": 20
  },
  "loading": false,
  "currentPage": 2,
  "maxPage": 10,
  "queryData": {
    "createpref": {}
  },
  "showNextPage": true,
  "showPrevPage": true
}
</div>
`;

exports[`DbStore Create Test: using prevPage back to third page 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "list": {
    "result": [
      {
        "myString": "20num",
        "myNum": 8400,
        "id": 20
      },
      {
        "myString": "21num",
        "myNum": 8820,
        "id": 21
      },
      {
        "myString": "22num",
        "myNum": 9240,
        "id": 22
      },
      {
        "myString": "23num",
        "myNum": 9660,
        "id": 23
      },
      {
        "myString": "24num",
        "myNum": 10080,
        "id": 24
      },
      {
        "myString": "25num",
        "myNum": 10500,
        "id": 25
      },
      {
        "myString": "26num",
        "myNum": 10920,
        "id": 26
      },
      {
        "myString": "27num",
        "myNum": 11340,
        "id": 27
      },
      {
        "myString": "28num",
        "myNum": 11760,
        "id": 28
      },
      {
        "myString": "29num",
        "myNum": 12180,
        "id": 29
      }
    ],
    "total": 99,
    "limit": 10,
    "skip": 20
  },
  "loading": false,
  "currentPage": 2,
  "maxPage": 10,
  "queryData": {},
  "showNextPage": true,
  "showPrevPage": true
}
</div>
`;
